# astra-mcp

./: .editorconfig  .gitignore  .ruff.toml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
common/: pyproject.toml
common/src/common/: __init__.py  git_utils.py  logging.py  os_paths.py  validation.py
common/src/common/mcp/: __init__.py  adapters.py  errors.py  schemas.py
compose/: docker-compose.dev.yml  docker-compose.sse.yml
deploy/: docker-compose.yml
deploy/garage/: garage.toml
scripts/: dev-setup.sh  fmt.sh  run-sse.sh  run-stdio.sh
servers/git-repo-snapshot/: .env.example  Dockerfile  README.md  pyproject.toml
servers/git-repo-snapshot/src/mcp_git_repo_snapshot/: __init__.py  __main__.py  server.py
servers/git-repo-snapshot/src/mcp_git_repo_snapshot/artifact_kinds/: cam.asset.repo_snapshot.json
servers/git-repo-snapshot/src/mcp_git_repo_snapshot/models/: params.py  repo_snapshot.py
servers/git-repo-snapshot/src/mcp_git_repo_snapshot/tools/: clone_repo.py
servers/git-repo-snapshot/src/mcp_git_repo_snapshot/transports/: app.py  sse.py
servers/mcp-cobol-parser/: .env.example  Dockerfile  pyproject.toml
servers/mcp-cobol-parser/mcp_cobol_parser/: __init__.py  __main__.py  cache.py  hashing.py  logging.py  pagination.py  server.py  settings.py
servers/mcp-cobol-parser/mcp_cobol_parser/java/: JsonCli.java
servers/mcp-cobol-parser/mcp_cobol_parser/models/: cam_copybook.py  cam_program.py  cam_source_index.py  common.py  error_record.py
servers/mcp-cobol-parser/mcp_cobol_parser/parsers/: cb2xml.py  proleap.py
servers/mcp-cobol-parser/mcp_cobol_parser/parsers/normalize/: copybook_normalizer.py  program_normalizer.py
servers/mcp-cobol-parser/mcp_cobol_parser/resources/: __init__.py  artifact_preview.py  file_preview.py  run_info.py
servers/mcp-cobol-parser/mcp_cobol_parser/tools/: __init__.py  parse_repo.py
servers/mcp-cobol-parser/mcp_cobol_parser/utils/: __init__.py  artifacts.py  fs.py  timers.py  tmpdirs.py
servers/mcp-cobol-parser/scripts/: demo_run.sh  fetch_jars.sh
servers/mcp-cobol-parser/vendor-src/proleap/: CLI.java
servers/mcp-jcl-parser-legacylens/: .env.example  Dockerfile  README.md  pyproject.toml
servers/mcp-jcl-parser-legacylens/src/mcp_jcl_parser_legacylens/: __init__.py  __main__.py  cache.py  hashing.py  pagination.py  server.py  settings.py
servers/mcp-jcl-parser-legacylens/src/mcp_jcl_parser_legacylens/artifact_kinds/: cam.jcl.job.json  cam.jcl.step.json
servers/mcp-jcl-parser-legacylens/src/mcp_jcl_parser_legacylens/models/: cam_jcl_job.py  cam_jcl_step.py  common.py  jcl_shared.py
servers/mcp-jcl-parser-legacylens/src/mcp_jcl_parser_legacylens/parsers/: legacylens.py
servers/mcp-jcl-parser-legacylens/src/mcp_jcl_parser_legacylens/resources/: artifact_preview.py  file_preview.py  run_info.py
servers/mcp-jcl-parser-legacylens/src/mcp_jcl_parser_legacylens/tools/: parse_repo.py
servers/mcp-jcl-parser-legacylens/src/mcp_jcl_parser_legacylens/utils/: fs.py
servers/mcp-mermaid-diagrammer/: .env.example  Dockerfile  README.md  pyproject.toml
servers/mcp-mermaid-diagrammer/src/mcp_mermaid_diagrammer/: __init__.py  __main__.py  server.py  settings.py
servers/mcp-mermaid-diagrammer/src/mcp_mermaid_diagrammer/engine/: driver.py  json_utils.py  sanity.py  selector.py
servers/mcp-mermaid-diagrammer/src/mcp_mermaid_diagrammer/models/: artifact_kind.py  diagram_instance.py  io_contracts.py
servers/mcp-mermaid-diagrammer/src/mcp_mermaid_diagrammer/tools/: __init__.py  mermaid_generate.py
servers/mcp-mermaid-diagrammer/src/mcp_mermaid_diagrammer/utils/: logging.py
servers/mcp-raina-arch-guidance-generator/: .env.example  Dockerfile  README.md  pyproject.toml
servers/mcp-raina-arch-guidance-generator/docs/: adding-new-arch-style.md
servers/mcp-raina-arch-guidance-generator/src/mcp_raina_arch_guidance_generator/: __main__.py  server.py  settings.py
servers/mcp-raina-arch-guidance-generator/src/mcp_raina_arch_guidance_generator/arch_styles/data_engineering/: config.yaml  prompts.yaml
servers/mcp-raina-arch-guidance-generator/src/mcp_raina_arch_guidance_generator/arch_styles/microservices/: config.yaml  prompts.yaml
servers/mcp-raina-arch-guidance-generator/src/mcp_raina_arch_guidance_generator/config/: logging.yaml
servers/mcp-raina-arch-guidance-generator/src/mcp_raina_arch_guidance_generator/models/: arch_guidance.py  params.py
servers/mcp-raina-arch-guidance-generator/src/mcp_raina_arch_guidance_generator/tools/: base_generator.py  data_pipeline_guidance.py  microservices_guidance.py
servers/mcp-raina-arch-guidance-generator/src/mcp_raina_arch_guidance_generator/utils/: artifacts_fetch.py  checksums.py  io_paths.py  logging.py  storage.py
servers/raina-input-fetcher/: .env.example  Dockerfile  README.md  pyproject.toml
servers/raina-input-fetcher/src/mcp_raina_input_fetcher/: __main__.py  server.py  settings.py
servers/raina-input-fetcher/src/mcp_raina_input_fetcher/artifact_kinds/: cam.asset.raina_input.json  cam.inputs.raina.json
servers/raina-input-fetcher/src/mcp_raina_input_fetcher/models/: params.py  raina_input.py
servers/raina-input-fetcher/src/mcp_raina_input_fetcher/schemas/: raina_input.json
servers/raina-input-fetcher/src/mcp_raina_input_fetcher/tools/: fetch_input.py
servers/workspace-doc-generator/: .env.example  Dockerfile  README.md  pyproject.toml
servers/workspace-doc-generator/src/mcp_workspace_doc_generator/: __init__.py  __main__.py  server.py  settings.py
servers/workspace-doc-generator/src/mcp_workspace_doc_generator/artifact_kinds/: cam.asset.file_detail.json
servers/workspace-doc-generator/src/mcp_workspace_doc_generator/config/: default.yaml  logging.yaml
servers/workspace-doc-generator/src/mcp_workspace_doc_generator/models/: file_detail.py  params.py
servers/workspace-doc-generator/src/mcp_workspace_doc_generator/tools/: generate_document.py
servers/workspace-doc-generator/src/mcp_workspace_doc_generator/utils/: artifacts_fetch.py  checksums.py  io_paths.py  logging.py  storage.py
(+15 files in other folders)
