[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-mcp"
version = "0.1.0"
description = "A collection of Model Context Protocol servers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Astra MCP Team" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "uv>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common/src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "servers/*/tests",
    "common/tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "common/src",
    "servers/*/src",
]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]