[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-git-repo-snapshot"
version = "0.1.3"
description = "MCP server that clones a Git repo and returns cam.asset.repo_snapshot"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Astra Team" }]

dependencies = [
  # Ensure streamable HTTP server is present
  "mcp[server]>=1.3.0,<2",
  "GitPython>=3.1.43",
  "pydantic>=2.7.4",
  "pydantic-core>=2.18.4",
  "typing-extensions>=4.12.2",
  "jsonschema>=4.23.0",
  "uvicorn>=0.30",
  "starlette>=0.36,<0.38",
]

[project.scripts]
mcp-git-repo-snapshot = "mcp_git_repo_snapshot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_git_repo_snapshot"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false