[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-cobol-parser"
version = "0.2.0"
description = "MCP server (streamable HTTP / stdio) that parses COBOL repos (ProLeap + CB2XML) and pages artifacts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Astra Team" }]

# Use the official MCP SDK with server extras for streamable HTTP
dependencies = [
  "mcp[server]>=1.3.0,<2",
  "pydantic>=2.7.4",
  "orjson>=3.10",
  "python-dotenv>=1.0",
  "aiofiles>=24.1",
  "xmltodict>=0.13",
  # The SDK includes its own server runner; uvicorn/starlette no longer required directly.
]

[project.scripts]
mcp-cobol-parser = "mcp_cobol_parser.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_cobol_parser"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false