[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-mermaid-diagrammer"
version = "0.1.0"
description = "MCP server that generates/sanitizes Mermaid diagrams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Astra Team" }]

dependencies = [
  "mcp[server]>=1.3.0,<2",     # streamable-http server
  "pydantic>=2.7.4",
  "openai>=1.51.0",
  "typing-extensions>=4.12.2",
  # add whatever your engine needs:
  # "uvicorn>=0.30", "starlette>=0.36,<0.38"  # only if you later choose ASGI path
]

[project.scripts]
mcp-mermaid-diagrammer = "mcp_mermaid_diagrammer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mermaid_diagrammer"]