[project]
name = "mcp-raina-arch-guidance-generator"
version = "0.1.0"
description = "MCP server that generates architecture guidance documents from workspace artifacts and returns a cam.governance.microservices_arch_guidance artifact."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Astra Team" }]

dependencies = [
  "mcp[server]>=1.3.0,<2",
  "pydantic>=2.7",
  "pydantic-core>=2.18",
  "orjson>=3.10",
  "PyYAML>=6.0",
  "httpx>=0.27",
  # polyllm: provider-agnostic LLM client
  "polyllm @ git+https://github.com/skamble7/platform-libraries.git@polyllm-v0.1.10#subdirectory=libs/polyllm",
  "langchain-openai>=0.2",
  "langchain-google-genai>=2.0",
  "langchain-aws>=0.2",
  "uvicorn>=0.30",
  "uvloop>=0.19; platform_system != 'Windows'",
  "click>=8.1",
  "boto3>=1.34",            # S3/Garage upload
]

[project.scripts]
mcp-raina-arch-guidance-generator = "mcp_raina_arch_guidance_generator.__main__:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_raina_arch_guidance_generator"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
