[project]
name = "mcp-raina-input-fetcher"
version = "0.1.0"
description = "MCP server that fetches Raina AVC/FSS/PSS input JSON from a URL and returns a cam.inputs.raina artifact."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Astra Team" }]

dependencies = [
  "mcp[server]>=1.3.0,<2",
  "pydantic>=2.7",
  "pydantic-core>=2.18",
  "httpx>=0.27",
  "jsonschema>=4.23",
  "orjson>=3.10",
  "uvicorn>=0.30",
  "uvloop>=0.19; platform_system != 'Windows'",
  "click>=8.1",
]

[project.scripts]
mcp-raina-input-fetcher = "mcp_raina_input_fetcher.__main__:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_raina_input_fetcher"]

[tool.ruff]
line-length = 100